syntax = "proto3";

package obnl.common;

import "google/protobuf/any.proto";

message SystemInit {}

message SimulatorConnection {
    enum SimulationType {
        OTHER = 0;
        THERMAL = 1;
        ELECTRICAL = 2;
    }
    SimulationType type = 1;
}

message SchedulerConnection {
    map<string, float> initial_values = 1;
    map<string, string> attribute_links = 2;
}

message AttributeMessage {
    float simulation_time = 1;
    string attribute_name = 2;
    float attribute_value = 3;
}

message NextStep {
    float time_step = 1;
    float current_time = 2;
}

message MetaMessage {
    string node_name = 1;
    enum MessageType {
        STEP = 0;
        INIT = 1;
        UPDATE_X = 2;
        UPDATE_Y = 3;
        ATTRIBUTE = 4;
        ANSWER = 5;
    }
    MessageType type = 2;

    google.protobuf.Any details = 4;
}

message Quit {}
